fix: layout shifting

--- a/src/components/Autocomplete/Autocomplete.module.scss
+++ b/src/components/Autocomplete/Autocomplete.module.scss
@@ -5,7 +5,7 @@
 .suggestions {
   position: absolute;
   z-index: 50;
-  top: 100%;
+  top: calc(100% - (1rem + var(--spacing-1)));
 
   width: 100%;
 
