--- a/src/components/Forms/ui/FormFields/FormFields.module.scss
+++ b/src/components/Forms/ui/FormFields/FormFields.module.scss
@@ -1,6 +1,6 @@
 .fieldset {
   margin-bottom: var(--spacing-2);
-  padding: var(--spacing-3);
+  padding: var(--spacing-3) var(--spacing-3) var(--spacing-1) var(--spacing-3);
   border: 1px solid var(--color-grey);
 }
 
